--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
+    "@mantine/notifications": "^7.1.7",
     "next": "14.0.1",
     "next-intl": "^3.0.0-rc.6",
     "react": "^18",
