--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mantine/hooks": "^7.1.7",
     "@mantine/notifications": "^7.1.7",
     "next": "14.0.1",
+    "next-compose-plugins": "^2.2.1",
     "next-intl": "^3.0.0-rc.6",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
