--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mantine/hooks": "^7.1.7",
     "@mantine/notifications": "^7.1.7",
     "@tabler/icons-react": "^2.40.0",
+    "@tanstack/react-query": "^5.7.2",
+    "@tanstack/react-query-devtools": "^5.7.4",
     "@types/lodash": "^4.14.200",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
