--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Gymnasticum", "tabler", "tanstack"]
+  "cSpell.words": ["awaitingresponse", "Gymnasticum", "tabler", "tanstack"]
 }
