--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["awaitingresponse", "Gymnasticum", "tabler", "tanstack"]
+  "cSpell.words": [
+    "awaitingresponse",
+    "datatable",
+    "Gymnasticum",
+    "tabler",
+    "tanstack"
+  ]
 }
