--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
+    "mantine-datatable": "^7.1.5",
     "next": "14.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-intl": "^3.0.0-rc.6",
